syntax = "proto3";

package getting.v1;

import "proto/getting/v1/basic.proto";
import "proto/getting/v1/page.proto";

service User {
  rpc Get(GetUserRequest) returns (UserDto) {}
  rpc Update(UpdateUserRequest) returns ( Empty) {}
  rpc StreamList(StreamListRequest) returns (stream UserDto) {}
}

message UserDto {
  int64 id = 1;
  string email = 2;
  optional string name = 3;
  int32 status = 4;
  // epoch time in milliseconds
  int64 ctime = 5;
}

message GetUserRequest { int64 id = 1; }

message PageUserRequest {
 Pagination pagination = 1;
  optional string name = 2;
  optional int32 status = 3;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string name = 2;
  optional int32 status = 3;
}

message StreamListRequest {
  optional string name = 2;
  optional int32 status = 3;
}
